# todoscare

./: .env.prod.example  .gitattributes  .gitignore  DEMO.md  DEPLOY.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4119623e9546_fase_2_patient_ficha_jsonb_wallet_as_.py  734a4142ec73_initial_schema.py  a1c7f0e2b3d4_fase_6_crm_payment_split_estado.py  b2d8e1f3a4c5_fase_7_aseguradora_scope.py  c3e9f0a1b2d6_fase_8_integration_events_push.py  cbeb6e3d9d3c_fase_2_cancelled_appointments_must_free_.py  d4f0a1b2c3e7_crm_marketing_campaigns.py  e5a1b2c3d4f8_patient_campaign_attribution.py
backend/app/: main.py  seed.py
backend/app/core/: audit.py  config.py  database.py  security.py
backend/app/integrations/: __init__.py  base.py  farmacia.py  lab.py  mapas.py  pago.py  push.py  whatsapp.py
backend/app/models/: __init__.py  base.py  catalog.py  clinical.py  finance.py  identity.py  insurance.py  integrations.py  marketing.py  patient.py  scheduling.py  tenant.py  wallet.py
backend/app/rbac/: deps.py  matrix.py  permissions.py
backend/app/routers/: admin.py  agenda.py  aseguradora.py  auth.py  crm.py  empresa.py  farmacia.py  integraciones.py  medico.py  patients.py  salud.py  wallet.py
backend/docker/: entrypoint.sh
backend/tests/: test_admin_smoke.py  test_aseguradora_smoke.py  test_crm_smoke.py  test_empresa_smoke.py  test_integraciones_smoke.py  test_medico_smoke.py  test_paciente_smoke.py  test_rbac_smoke.py
(+109 files in other folders)
