[project]
name = "todoscare-backend"
version = "0.1.0"
description = "TODOSCARE — plataforma médica/odontológica multi-tenant (backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.5",
    "passlib[bcrypt]>=1.7",
    "bcrypt<4.1",  # passlib 1.7.4 breaks on bcrypt>=4.1 (removed `__about__`)
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.12",
    "gunicorn>=23.0",  # servidor de producción (workers uvicorn)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
